--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-BDVWGHX0JJ');
+  gtag('config', 'G-XSW9CHEFTC');
 </script>
 
 </head>
